--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-kwantong",
+  "name": "vue-boot5_2_1",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.1",
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^3.1.2",
+    "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-toastify": "^0.1.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
