--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^4.29.7",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
@@ -16,7 +17,8 @@
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
-    "vue3-toastify": "^0.1.14"
+    "vue3-toastify": "^0.1.14",
+    "vuetify": "^3.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
