--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-boot5_2_1",
+  "name": "vue-kwantong",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,16 +8,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/vue-query": "^4.29.7",
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.6.0",
+    "@tanstack/vue-query": "^4.29.7",
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "bootstrap-datepicker": "^1.10.0",
     "jwt-decode": "^3.1.2",
-    "pinia": "^2.0.14",
+    "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "sweetalert2": "^11.6.13",
+    "v-calendar": "^3.1.2",
     "vue": "^3.3.4",
+    "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.2.5",
-    "vue3-toastify": "^0.1.14",
+    "vue-sweetalert2": "^5.0.2",
+    "vue3-toastify": "^0.1.9",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^3.4.0"
   },
   "devDependencies": {
